logs/django-bankdownloads.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bankdownloads'...
Listing './lib/python3.5/site-packages/bankdownloads/management'...
Listing './lib/python3.5/site-packages/bankdownloads/management/commands'...
Compiling './lib/python3.5/site-packages/bankdownloads/management/commands/bankdownloads_notifier.py'...
***   File "./lib/python3.5/site-packages/bankdownloads/management/commands/bankdownloads_notifier.py", line 27
    print "Warning date is %s" % warning_date
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bankdownloads/management/commands/bankdownloads_processor.py'...
***   File "./lib/python3.5/site-packages/bankdownloads/management/commands/bankdownloads_processor.py", line 61
    print "Skipping %s" % f
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bankdownloads/models'...
Compiling './lib/python3.5/site-packages/bankdownloads/models/bankdownload.py'...
***   File "./lib/python3.5/site-packages/bankdownloads/models/bankdownload.py", line 219
    print 'Warning: Could not parse credit'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bankdownloads/utils'...
Listing './lib/python3.5/site-packages/django_bankdownloads-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
